@@ -204,6 +204,10 @@ Class restartAction()
 	CGPoint end = [touch previousLocationInView:[touch view]];
 	end = [[CCDirector sharedDirector] convertToGL:end];
 	
+	// All cocos2d nodes assumes that these states are enabled.
+	// Since we are drawing outside the "draw" event, we need to turn them on manually
+	CC_ENABLE_DEFAULT_GL_STATES();
+
 	// begin drawing to the render texture
 	[target begin];
 	
@@ -228,6 +232,9 @@ Class restartAction()
 	}
 	// finish drawing and return context back to the screen
 	[target end];
+	
+	// Disable the states, that were turned on manually
+	CC_DISABLE_DEFAULT_GL_STATES();
 }
 
 #elif defined(__MAC_OS_X_VERSION_MAX_ALLOWED)
@@ -245,6 +252,10 @@ Class restartAction()
 	CGPoint start = currentLocation;
 	CGPoint end = lastLocation;
 	
+	// All cocos2d nodes assumes that these states are enabled.
+	// Since we are drawing outside the "draw" event, we need to turn them on manually
+	CC_ENABLE_DEFAULT_GL_STATES();
+
 	// begin drawing to the render texture
 	[target begin];
 	
@@ -263,6 +274,7 @@ Class restartAction()
 			[brush setRotation:rand()%360];
 			float r = ((float)(rand()%50)/50.f) + 0.25f;
 			[brush setScale:r];
+
 			// Call visit to draw the brush, don't call draw..
 			[brush visit];
 		}
@@ -271,6 +283,9 @@ Class restartAction()
 	[target end];
 	
 	lastLocation = currentLocation;
+	
+	// Disable the states, that were turned on manually
+	CC_DISABLE_DEFAULT_GL_STATES();
 	
 	// swallow the event. Don't propagate it
 	return YES;
@@ -317,10 +332,17 @@ Class restartAction()
 		// It's possible to modify the RenderTexture blending function by
 //		[[rend sprite] setBlendFunc:(ccBlendFunc) {GL_ONE, GL_ONE_MINUS_SRC_ALPHA}];
 
+		// All cocos2d nodes assumes that these states are enabled.
+		// Since we are drawing outside the "draw" event, we need to turn them on manually
+		CC_ENABLE_DEFAULT_GL_STATES();
+
 		[rend begin];
 		[spr_premulti visit];
 		[spr_nonpremulti visit];
 		[rend end]; 
+		
+		// disable teh states that were turned on manually
+		CC_DISABLE_DEFAULT_GL_STATES();
 		
 		CGSize s = [[CCDirector sharedDirector] winSize];
 		
